--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1055,6 +1055,15 @@ angal.ward.theselectedwardhaspatients.fmt.msg                                   
 angal.ward.pleasecheckinadmissionpatients.msg                                    = Please check in admission / patients.
 angal.ward.maternity.txt                                                         = Maternity
 angal.ward.cannotdeletematernityward.msg                                         = Cannot delete Maternity ward.
+# ChatMessages
+angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                 = \n*** {0} wants to share with you this report: {1}\n
+# CommunicationFrame
+angal.xmpp.me.txt                                                                = me
+angal.xmpp.wouldliketosend.fmt.msg                                               = {0} would like to send: \n"{1}
+angal.xmpp.thefiletransferofbetweenyouandendedsuccesfully.fmt.msg                = the file transfer of {0} between you and {1} ended successfully
+angal.xmpp.filetransferofhasbeenaccepted.fmt.msg                                 = 0101010001000001 $File transfer of: {0} has been accepted
+angal.xmpp.filetransferofhasbeenrejected.fmt.msg                                 = 0101010001010010 $File transfer of: {0} has been rejected
+angal.xmpp.youhaverejectedthefiletransfer.txt                                    = you have rejected the file transfer
 
 ##########################################################
 # Remaining original key/values that need review/work/etc.
@@ -1601,14 +1610,14 @@ angal.ward.wardwithpharmacy                                                     
 angal.wardpharmacynew.selectward                                                 = Select a ward
 angal.wardpharmacynew.ward                                                       = Another ward
 angal.wardpharmacy.stockwardledger.txt                                           = StockWard Ledger
-angal.xmpp.contacts                                                              = Contacts
-angal.xmpp.getinfo                                                               = Get info
-angal.xmpp.info                                                                  = info
-angal.xmpp.isnowoffline                                                          = is now offline
-angal.xmpp.isnowonline                                                           = is now online
-angal.xmpp.sendfile                                                              = Send File
-angal.xmpp.user                                                                  = User
-angal.xmpp.usersinfo                                                             = user's info
+angal.xmpp.contacts.border                                                              = Contacts
+angal.xmpp.getinfo.txt                                                           = Get Info
+angal.xmpp.isnowoffline.txt                                                      = is now offline
+angal.xmpp.isnowonline.txt                                                       = is now online
+angal.xmpp.sendfile.txt                                                          = Send File
+angal.xmpp.usersinfo.border                                                      = User's Info
+angal.xmpp.userinfo.fmt.txt                                                      = User: {0}\nInfo: {1}
+
 
 ############################
 # Key/values used in sql files
