Chore: misc changes

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -479,6 +479,19 @@ angal.admission.diagnosisout.col                                                
 angal.exa.proc.col                                                               = PROC
 angal.exa.default.col                                                            = Default
 # ExamShow
+# PatientExaminationEdit
+angal.examination.heightabbr.col                                                 = (H)
+angal.examination.weightabbr.col                                                 = (W)
+angal.examination.arterialpressureabbr.col                                       = AP
+angal.examination.heartrateabbr.col                                              = HR
+angal.examination.temperatureabbr.col                                            = T
+angal.examination.saturationabbr.col                                             = O2
+angal.examination.hgt.col                                                        = HGT
+angal.examination.respiratoryrateabbr.col                                        = RR
+angal.examination.diuresisvolume24habbr.col                                      = D24H
+angal.examination.diuresisabbr.col                                               = D
+angal.examination.bowelabbr.col                                                  = B
+angal.examination.auscultationabbr.col                                           = AUSC
 # ExamTypeBrowser
 # LabBrowser
 angal.malnutrition.datesupp.col                                                  = Further Date
@@ -593,7 +606,6 @@ angal.billbrowser.pleaseselectabill.msg                                         
 angal.billbrowser.bills.title                                                    = Bills
 angal.billbrowser.pending.title                                                  = Pending
 angal.billbrowser.closed.title                                                   = Closed
-angal.billbrowser.report.title                                                   = Report
 angal.billbrowser.todaycolon.txt                                                 = Today:
 angal.billbrowser.notpaidcolon.txt                                               = Not Paid:
 angal.billbrowser.periodcolon.txt                                                = Period:
@@ -1073,15 +1085,14 @@ angal.admission.unknown                                                         
 angal.agetype.insertvalidage                                                     = Insert valid age
 angal.agetype.newborn.txt                                                        = Newborn
 angal.common.codestar                                                            = Code *
-angal.common.datefrom                                                            = Date From:
-angal.common.doyouwanttoproceed                                                  = Do you want to proceed?
+angal.common.doyouwanttoproceed.msg                                              = Do you want to proceed?
 angal.common.hours                                                               = Hours
 angal.common.minutes                                                             = Minutes
 angal.common.minutesabbr                                                         = Min
 angal.common.patientID                                                           = Pat. ID
 angal.common.save                                                                = Save
-angal.common.thisvaluecannotbegreaterthan                                        = This value cannot be greater than 
-angal.common.thisvaluecannotbelesserthan                                         = This value cannot be lesser than 
+angal.common.thisvaluecannotbegreaterthan.fmt.msg                                = This value cannot be greater than {0}. 
+angal.common.thisvaluecannotbelessthan.fmt.msg                                   = This value cannot be less than {0}. 
 angal.common.uom.bpm                                                             = bpm
 angal.common.uom.celsius                                                         = C
 angal.common.uom.centimeter                                                      = cm
@@ -1103,7 +1114,7 @@ angal.dicom.image.studyid                                                       
 angal.dicom.image.zoom                                                           = Zoom
 angal.dicom.loading                                                              = Loading...
 angal.dicom.open.txt                                                             = Open DICOM
-angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty                         = The file is too big. Please set 'dicom.max.size' into dicom.properties
+angal.dicom.thefileistoobigpleasesetdicommaxsizeproperty.fmt.msg                 = The file is too big. Please set 'dicom.max.size' into dicom.properties ({0})
 angal.dicom.thumbnail.category                                                   = Category
 angal.dicom.thumbnail.modality                                                   = Modality
 angal.dicom.thumbnail.patient                                                    = Patient
@@ -1127,31 +1138,22 @@ angal.examination.title                                                         
 angal.examination.ap.max                                                         = max
 angal.examination.ap.min                                                         = min
 angal.examination.arterialpressure                                               = Arterial Pressure
-angal.examination.arterialpressureabbr                                           = AP
 angal.examination.auscultation                                                   = Auscultation
-angal.examination.auscultationabbr                                               = AUSC
 angal.examination.bmi                                                            = BMI
 angal.examination.bowel                                                          = Bowel
-angal.examination.bowelabbr                                                      = B
 angal.examination.diuresis                                                       = Diuresis
-angal.examination.diuresisabbr                                                   = D
 angal.examination.diuresisvolume24h                                              = Diuresis Vol 24H
-angal.examination.diuresisvolume24habbr                                          = D24H
 angal.examination.heartrate                                                      = Heart Rate
-angal.examination.heartrateabbr                                                  = HR
-angal.examination.heightabbr                                                     = (H)
+angal.examination.heightabbr.txt                                                 = (H)
 angal.examination.hgt                                                            = HGT
 angal.examination.note                                                           = Complain
 angal.examination.respiratoryrate                                                = Respiratory Rate
-angal.examination.respiratoryrateabbr                                            = RR
 angal.examination.respiratoryrateunit                                            = bpm
 angal.examination.saturation                                                     = Saturation
-angal.examination.saturationabbr                                                 = O2
 angal.examination.temperature                                                    = Temperature
-angal.examination.temperatureabbr                                                = T
 angal.examination.tooltip.savepatientexamination                                 = Save Patient Examination
 angal.examination.tooltip.toggleexamination                                      = Enable / Disable examination
-angal.examination.weightabbr                                                     = (W)
+angal.examination.weightabbr.txt                                                 = (W)
 angal.exams.find                                                                 = Search
 angal.genericreportbill.doyouwanttoprintreceipt.msg                              = Do you want to print a receipt?
 angal.help.pdfviewernotfound                                                     = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
@@ -1203,9 +1205,8 @@ angal.medicals.nexttwomonths                                                    
 angal.medicals.onlyquantity                                                      = Only quantity
 angal.medicals.othermonth                                                        = Other month...
 angal.medicals.pcsperpckExt                                                      = Pieces per Packet
-angal.medicals.pleaseselectareport                                               = Please select a report
-angal.medicals.pleaseselectperiod                                                = Please select a period
-angal.medicals.report                                                            = Report
+angal.medicals.pleaseselectareport.msg                                           = Please select a report:
+angal.medicals.pleaseselectperiod.msg                                            = Please select a period:
 angal.medicals.selecttype                                                        = Select type
 angal.medicals.thismonth                                                         = This month
 angal.medicals.today                                                             = Today
@@ -1537,7 +1538,7 @@ angal.therapy.doyouwanttosetanumernowfor                                        
 angal.therapy.end                                                                = End
 angal.therapy.every                                                              = Every
 angal.therapy.followingdrugsarefewornotavailable                                 = Following drugs are few or not available:\n
-angal.therapy.four                                                              = Four
+angal.therapy.four                                                               = Four
 angal.therapy.frequencywithinday                                                 = Frequency within day
 angal.therapy.frequencywithinperiod                                              = Frequency within period
 angal.therapy.important                                                          = Important
@@ -1566,7 +1567,7 @@ angal.therapy.therapiesplancouldnotbesaved                                      
 angal.therapy.therapiesplansaved                                                 = Therapies plan saved
 angal.therapy.therapy                                                            = Therapy
 angal.therapy.therapyfor                                                         = Therapy for
-angal.therapy.therapynotavailable                                                = Therapy not available
+angal.therapy.therapynotavailable.title                                          = Therapy Not Available
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                   = There's no telephone number associated with this Patient
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                = The Therapy has not been checked, continue?
 angal.therapy.thetherapyisnotavailablecontinue                                   = The Therapy is not available, continue?
@@ -1582,7 +1583,10 @@ angal.visit.durationinminutes                                                   
 angal.visit.selectaward                                                          = Select a Ward
 angal.visit.service                                                              = Service
 angal.visit.visits                                                               = Visits
-angal.visit.pleaseselectapatient.border                                          = Please Select a Patient
+angal.visit.pleaseselectapatient.title                                           = Please Select a Patient
+angal.visit.pleasechooseadate.msg                                                = Please choose a date.
+angal.visit.pleasechooseaward.msg                                                = Please choose a ward.
+angal.visit.pleasechooseapatient.msg                                             = Please choose a patient.
 angal.vodatetext.isnotavaliddate.fmt.msg                                         = "{0}" is not a valid date.
 angal.vodatetext.isnotavaliddatepleaseuseortoseparate.fmt.msg                    = "{0}" is not a valid date.  Please use / or - to separate.
 angal.ward.bedsedit                                                              = Number of beds *
