OP-544 review comments

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -323,10 +323,10 @@ angal.billbrowser.today.btn                                                     
 angal.billbrowser.today.btn.key                                                  = T
 angal.groupsbrowser.groupmenu.btn                                                = GroupMenu
 angal.groupsbrowser.groupmenu.btn.key                                            = M
-angal.lab.n.btn                                                                  = N
-angal.lab.p.btn                                                                  = P
+angal.lab.negativeabbr.btn                                                       = N
+angal.lab.positiveabbr.btn                                                       = P
 angal.labnew.ip.btn                                                              = IP
-angal.labnew.opd.btn                                                             = OPT
+angal.labnew.opd.btn                                                             = OPD
 angal.newbill.findpatient.btn                                                    = Find Patient
 angal.newbill.findpatient.btn.key                                                = P
 angal.newbill.changepatient.btn                                                  = Change Patient
